# omnigent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  openapi.json
.github/: MAINTAINER  areas.json
.github/workflows/: areas.test.js  benchmark-pr.yml  benchmark.yml  merge-ready.yml
ap-web/src/: test-setup.ts
deploy/kubernetes/: README.md
deploy/openshell/: README.md
designs/: SESSION_PROJECTS_SIDEBAR.md  harness-modular-registry-proposal.md
dev/benchmarks/: __init__.py
dev/omnidev/: Cargo.toml  README.md
dev/omnidev/src/: lock.rs  logs.rs  main.rs  paths.rs  pod.rs  ports.rs  process.rs  state.rs  supervisor.rs  watcher.rs
dev/omnidev/src/tui/: mod.rs  render.rs
dev/omnidev/tests/: pod_setup.rs
docs/: cursor-native-tui-mirror-plan.md  harness-bench-design.md
editors/vscode/: package-lock.json
omnigent/: cli.py  cli_common.py  cli_config.py  cli_native.py  cursor_native_bridge.py  cursor_native_forwarder.py  cursor_native_permissions.py  reasoning_effort.py
omnigent/db/: db_models.py  enum_codecs.py
omnigent/entities/: __init__.py  scheduled_task.py
omnigent/inner/: codex_executor.py  cursor_executor.py
omnigent/onboarding/: harness_install.py
omnigent/repl/: _repl.py
omnigent/runner/: app.py  policy.py
omnigent/server/: managed_hosts.py  schemas.py
omnigent/stores/: __init__.py
omnigent/tools/: manager.py
scripts/: check_benchmark_seed_schema.py
tests/: test_cursor_native_forwarder.py  test_cursor_native_permissions.py  test_pi_native_extension.py  test_reasoning_effort.py
web/: package-lock.json  package.json
(+111 files in other folders)
